add: fonts, upd: project

--- a/app/css/config/_index.scss
+++ b/app/css/config/_index.scss
@@ -1,1 +1,6 @@
-@import 'paths', 'fonts', 'grid', 'colors', 'functions', 'maps';
+@import 'paths';
+@import 'fonts';
+@import 'grid';
+@import 'colors';
+@import 'functions';
+@import 'maps';
