--- a/app/css/components/buttons.scss
+++ b/app/css/components/buttons.scss
@@ -1,19 +1,16 @@
 .btn {
-  $color-primary-hover: $color-blue-80;
-  $color-primary-focus: $color-blue-100;
-  $color-primary-active: $color-blue-100;
+  $color-primary-hover: $color-primary-hover;
 
   display: inline-block;
-  padding: #{px-to-em(12)} #{px-to-em(25)};
+  padding: 13px 16px;
   color: $color-primary;
-  font-size: 1rem;
-  line-height: 1.25;
+  @include text-button-s;
   vertical-align: middle;
   text-align: center;
-  border-radius: 3px;
+  border-radius: 100px;
   border: 1px solid $color-primary;
   cursor: pointer;
-  transition: 0.15s ease-in-out;
+  @include transition;
 
   &:hover,
   &--hover {
@@ -22,26 +19,8 @@
     border-color: $color-primary-hover;
   }
 
-  &:focus,
   &--focus {
-    color: $color-white;
-    background-color: $color-primary-focus;
-    border-color: $color-primary-focus;
-  }
-
-  &:active,
-  &--active {
-    color: $color-white;
-    background-color: $color-primary-focus;
-    border-color: $color-primary-focus;
-  }
-
-  &--active {
-    &:focus {
-      color: $color-white;
-      background-color: $color-primary-hover;
-      border-color: $color-primary-hover;
-    }
+    outline: 1px solid $color-primary-hover;
   }
 
   &:disabled,
@@ -52,83 +31,28 @@
     appearance: none;
   }
 
-  // Colors
-  &--light {
-    color: $color-white;
-    background-color: transparentize($color-white, 0.9);
-    border: unset;
-
-    &:hover,
-    &:focus {
-      background-color: transparentize($color-white, 0.8);
-      border: unset;
-    }
-  }
-
-  //Themes
-  @include btn-color(primary, $color-primary);
-  @include btn-color(secondary, $color-secondary);
-
   // Sizes
   &--small {
-    font-size: #{px-to-rem(12)};
+    @include btn-small;
   }
 
   &--large {
-    font-size: #{px-to-rem(20)};
+    @include btn-large;
   }
 
   &--w100 {
-    padding-left: #{px-to-rem(5)};
-    padding-right: #{px-to-rem(5)};
     width: 100%;
-  }
-
-  // Icons
-  &--icon {
-    display: inline-flex;
-    align-items: center;
-    padding: 12px 16px;
-
-    .icon {
-      display: inline-block;
-      width: 18px;
-      height: 18px;
-      margin-right: 10px;
-    }
-
-    &.btn--small {
-      padding: 10.5px 12px;
-
-      .icon {
-        display: inline-block;
-        width: 15px;
-        height: 15px;
-        margin-right: 6px;
-      }
-    }
-
-    &.btn--large {
-      padding: 13px 20px;
-
-      .icon {
-        width: 24px;
-        height: 24px;
-      }
-    }
   }
 
   // Outline
   &--outline {
-    color: $color-white;
+    color: $color-primary;
     background-color: transparent;
-    border: 1px solid $color-white;
+    border: 1px solid $color-primary;
 
-    &:hover,
-    &:focus {
-      color: $color-gray-100;
-      background-color: $color-white;
-      border: 1px solid $color-white;
+    &:hover {
+      color: $color-white;
+      background-color: $color-primary;
     }
   }
 }
