--- a/app/css/components/form.scss
+++ b/app/css/components/form.scss
@@ -30,7 +30,7 @@
       top: 100%;
       margin-top: 2px;
       font-size: 12px;
-      color: $color-error;
+      color: $color-red-100;
       left: 0;
     }
   }
@@ -223,10 +223,10 @@
 
   &-error {
     * {
-      border-color: $color-error;
+      border-color: $color-red-100;
 
       &:focus {
-        border-color: $color-error;
+        border-color: $color-red-100;
       }
     }
   }
