--- a/app/css/config/colors.scss
+++ b/app/css/config/colors.scss
@@ -1,20 +1,77 @@
-// Colors
-$color-white: #FFFFFF;
-$color-black: #000000;
-$color-primary: #1B74FD;
-$color-secondary: #FD5800;
-$color-primary-variant: #00b763;
-$color-error: #FF0000;
+:root {
+  //Primary
+  --color-primary: var(--color-blue-70);
+  --color-primary-hover: var(--color-blue-80);
+  // Blue
+  --color-blue-100: #0038D7;
+  --color-blue-80: #0042FF;
+  --color-blue-70: #1B74FD;
+  --color-blue-70-opacity: #{transparentize(#1B74FD, 0.5)};
+  // Dark Blue
+  --color-dark-blue-100: #283B70;
+  // Gray
+  --color-gray-100: #363C4E;
+  --color-gray-100-overlay: #{transparentize(#363C4E, 0.3)};
+  --color-gray-80: #717784;
+  --color-gray-70: #7B88A5;
+  --color-gray-60: #ADB3C5;
+  --color-gray-40: #DFE3EC;
+  --color-gray-20: #F2F4F8;
+  --color-gray-10: #F6F9FF;
+  // Green
+  --color-green-100: #0BB578;
+  --color-green-10: #D1F8E1;
+  // Red
+  --color-red-100: #ED143B;
+  // White
+  --color-white-100: #FFFFFF;
+  --color-white-80: #{transparentize(#FFFFFF, 0.2)};
+  --color-white-70: #{transparentize(#FFFFFF, 0.3)};
+  --color-white-50: #{transparentize(#FFFFFF, 0.5)};
+  --color-white-20: #{transparentize(#FFFFFF, 0.8)};
+  --color-white-10: #{transparentize(#FFFFFF, 0.9)};
+}
 
 // Gray
-$color-gray-100: #363C4E;
-$color-gray-80: #7C8292;
-$color-gray-60: #C7CBD6;
-$color-gray-40: #DFE3EC;
-$color-gray-20: #F2F4F8;
-$color-gray-10: #F6F9FF;
+$color-gray-100: var(--color-gray-100);
+$color-gray-100-70: var(--color-gray-100-overlay);
+$color-gray-80: var(--color-gray-80);
+$color-gray-70: var(--color-gray-70);
+$color-gray-60: var(--color-gray-60);
+$color-gray-40: var(--color-gray-40);
+$color-gray-20: var(--color-gray-20);
+$color-gray-10: var(--color-gray-10);
 
 // Blue
-$color-blue-100: #0038D7;
-$color-blue-80: #0042FF;
-$color-blue-70: #1B74FD;
+$color-blue-100: var(--color-blue-100);
+$color-blue-80: var(--color-blue-80);
+$color-blue-70: var(--color-blue-70);
+$color-blue-70-50: var(--color-blue-70-opacity);
+
+// Dark Blue
+$color-dark-blue-100: var(--color-dark-blue-100);
+
+// Green
+$color-green-100: var(--color-green-100);
+$color-green-10: var(--color-green-10);
+
+// Red
+$color-red-100: var(--color-red-100);
+
+// Apex
+$color-white: var(--color-white-100);
+$color-white-80: var(--color-white-80);
+$color-white-70: var(--color-white-70);
+$color-white-50: var(--color-white-50);
+$color-white-20: var(--color-white-20);
+$color-white-10: var(--color-white-10);
+$color-black: #000000;
+$color-primary: var(--color-primary);
+$color-primary-hover: var(--color-primary-hover);
+
+$color-var1: #532AD3;
+
+.theme-var1 {
+  --color-primary: #{$color-var1};
+  --color-primary-hover: #{darken($color-var1, 10)};
+}
