--- a/app/css/config/fonts.scss
+++ b/app/css/config/fonts.scss
@@ -1,1 +1,34 @@
-$baseFontName: 'Base font';
+$baseFontName: 'GothamPro';
+
+@font-face {
+  font-family: 'GothamPro';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('../assets/fonts/GothamPro/400.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'GothamPro';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url('../assets/fonts/GothamPro/500.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'GothamPro';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url('../assets/fonts/GothamPro/700.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'GothamPro';
+  font-style: normal;
+  font-weight: 900;
+  font-display: swap;
+  src: url('../assets/fonts/GothamPro/900.woff2') format('woff2');
+}
+
