--- a/app/css/core/image-container.scss
+++ b/app/css/core/image-container.scss
@@ -1,4 +1,19 @@
-.image-fit {
+.image-container {
+  position: relative;
+  width: 100%;
+
+  &::after {
+    content: '';
+    display: block;
+    padding-top: 56%;
+  }
+
+  img {
+    @include fill;
+    width: 100%;
+    height: 100%;
+  }
+
   &.is-contain {
     img {
       object-fit: contain;
