--- a/app/css/core/ui-kit/ui-toolkit.scss
+++ b/app/css/core/ui-kit/ui-toolkit.scss
@@ -32,7 +32,7 @@
     width: $ui-aside-maw;
     height: 100vh;
     background: rgba(249, 249, 249, 0.7);
-    box-shadow: inset 0 1px 2px transparentize($color-white, 0.3);
+    box-shadow: inset 0 1px 2px $color-white-20;
     backdrop-filter: blur(80px);
 
     @include media(tabletSmall) {
@@ -233,7 +233,7 @@
 
     thead {
       td {
-        color: transparentize($color-gray-100, 0.3);
+        color: $color-gray-20;
         font-size: 12px;
         font-weight: 400;
         line-height: 1;
