--- a/app/css/core/utils.scss
+++ b/app/css/core/utils.scss
@@ -13,10 +13,10 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: z(backdrop);
   width: 100%;
   height: 100%;
   overflow: scroll;
-  z-index: -100;
 }
 
 .visually-hidden {
