--- a/app/css/mixins/_index.scss
+++ b/app/css/mixins/_index.scss
@@ -1,1 +1,5 @@
-@import "utils", "media-queries", "custom", "fonts";
+@import "utils";
+@import "media-queries";
+@import "custom";
+@import "fonts";
+@import "buttons";
