--- a/app/templates/partials/core/picture-source.hbs
+++ b/app/templates/partials/core/picture-source.hbs
@@ -1,9 +1,7 @@
-{{#if no-webp}}{{else}}
+{{#ifUseWebp}}
   <source {{#if media}}media="({{media}})" {{/if}}
-      data-srcset="../assets/images/{{img}}.webp,
-          ../assets/images/{{img}}@2x.webp 2x" type="image/webp">
-{{/if}}
+      data-srcset="../assets/images/{{img}}.webp, ../assets/images/{{img}}@2x.webp 2x" type="image/webp">
+{{/ifUseWebp}}
 <source {{#if media}}media="({{media}})" {{/if}}
-    data-srcset="../assets/images/{{img}}.{{fallback-ext}},
-          ../assets/images/{{img}}@2x.{{fallback-ext}} 2x"
-  {{#ifCond fallback-ext 'jpg'}} type="image/jpeg" {{else}} type="image/png" {{/ifCond}}>
+    data-srcset="../assets/images/{{img}}.{{ext}}, ../assets/images/{{img}}@2x.{{ext}} 2x"
+  {{#ifCond ext 'jpg'}} type="image/jpeg"{{else}} type="image/png"{{/ifCond}}>
