--- a/app/templates/partials/layout/head.hbs
+++ b/app/templates/partials/layout/head.hbs
@@ -2,6 +2,11 @@
 <html lang="ru">
 
 <head>
+  <link rel="preload" href="/assets/fonts/GothamPro/400.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/assets/fonts/GothamPro/500.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/assets/fonts/GothamPro/700.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/assets/fonts/GothamPro/900.woff2" as="font" type="font/woff2" crossorigin>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0">
   <meta name="format-detection" content="telephone=no">
