--- a/app/templates/partials/layout/header.hbs
+++ b/app/templates/partials/layout/header.hbs
@@ -1,6 +1,35 @@
 <header class="header page__header">
   <div class="container">
-    <h2>HEADER</h2>
+    <nav class="header__nav">
+        <div class="header__logo logo">
+            <img src="../assets/images/common/logo.png" alt="logo">
+        </div>
+        <div class="header__info">
+            <ul class="header-info">
+                <li class="header-info__item">
+                    <div class="info-item">
+                        <span class="info-item__title">Наш email:</span>
+                        <a href="mailto:sibbc@yandex.ru" class="info-item__link">sibbc@yandex.ru</a>
+                    </div>
+                </li>
+                <li class="header-info__item">
+                    <div class="info-item">
+                        <span class="info-item__title">Отдел сбыта:</span>
+                        <a href="tel:+73912205866" class="info-item__link">+7 (391) 220 58 66</a>
+                    </div>
+                </li>
+                <li class="header-info__item">
+                    <div class="info-item">
+                        <span class="info-item__title">Приемная:</span>
+                        <a href="tel:+73912211526" class="info-item__link">+7 (391) 221 15 26</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="header__call">
+            <button class="header-button">Заказать звонок</button>
+        </div>
+    </nav>
   </div>
 </header>
 
