--- a/app/css/layout/footer.scss
+++ b/app/css/layout/footer.scss
@@ -1,3 +1,21 @@
 .footer {
+    padding: 40px 0 60px;
+    background: #fff;
 
+    &__content {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &-nav {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+
+        &__item {
+            flex: 50%;
+            color: #4f4e4e;
+            margin-bottom: 15px;
+        }
+    }
 }
