--- a/app/css/layout/header.scss
+++ b/app/css/layout/header.scss
@@ -3,48 +3,55 @@
   color: #4f4e4e;
   background: #f1f5f9;
 
-  &__nav {
+  &-top {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
   }
 
-  &__info {
+  &__contacts {
     width: 100%;
     height: 100%;
     max-width: 586px;
   }
 
-  &-info {
+  &-contacts {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     line-height: 25px;
   }
 
-  &__call {
+  &__actions {
     width: 100%;
     max-width: 255px;
   }
+
+  &__bottom {
+    margin-top: 25px;
+    background: #fff;
+  }
+
+  &-menu {
+    &__list {
+      display: flex;
+    }
+
+    &__item {
+      flex-grow: 1;
+    }
+  }
 }
 
-.info-item {
+.contacts-item {
   &__link {
     display: block;
     font-weight: 900;
   }
 }
 
-.container {
-  width: 100%;
-  max-width: 1220px;
-  margin: 0 auto;
-  padding: 0 12px;
-  box-sizing: border-box;
-}
-
-.header-button {
+.js-popup {
   position: relative;
   border-radius: 24px;
   width: 100%;
@@ -67,5 +74,19 @@
     height: 50px;
     border-radius: 24px;
     border: 1px solid #feb22e;
+  }
+}
+
+.menu-item {
+  display: block;
+  font-weight: 700;
+  text-transform: uppercase;
+  height: 64px;
+  line-height: 64px;
+  text-align: center;
+  border-left: 1px solid #f1f5f9;
+
+  &:last-child {
+    border-right: 1px solid #f1f5f9;
   }
 }
