--- a/app/templates/partials/layout/footer.hbs
+++ b/app/templates/partials/layout/footer.hbs
@@ -1,9 +1,51 @@
 </main>
 
 <footer class="footer page__footer">
-  <div class="container">
-    <h2>FOOTER</h2>
-  </div>
+    <div class="container">
+        <div class="footer__content">
+            <div class="footer__logo">
+                <img src="../assets/images/common/logo.png" alt="logo">
+            </div>
+            <div class="footer__nav">
+                <ul class="footer-nav">
+                <li class="footer-nav__item">Главная</li>
+                <li class="footer-nav__item">О компаии</li>
+                <li class="footer-nav__item">Каталог товаров</li>
+                <li class="footer-nav__item">Блог</li>
+                <li class="footer-nav__item">Контакты</li>
+                </ul>
+            </div>
+            <div class="footer__contacts">
+                <ul class="footer-contacts">
+                    <li class="footer-contacts__item">
+                        <div class="contacts-item">
+                            <span class="contacts-item__title">Наш адрес:</span>
+                            <a href="#" class="contacts-item__link">Россия, г. Красноярск, ул. Маерчака, 55</a>
+                        </div>
+                    </li>
+                    <li class="footer-contacts__item">
+                        <div class="contacts-item">
+                            <span class="contacts-item__title">Отдел сбыта:</span>
+                            <a href="tel: +7 (391) 220 58 66" class="contacts-item__link">+7 (391) 220 58 66</a>
+                            <a href="tel: +7 (391) 221-57-73" class="contacts-item__link">+7 (391) 221-57-73</a>
+                        </div>
+                    </li>
+                    <li class="footer-contacts__item">
+                        <div class="contacts-item">
+                            <span class="contacts-item__title">Наш E-mail:</span>
+                            <a href="mailto:sibbc@yandex.ru" class="contacts-item__link">sibbc@yandex.ru</a>
+                        </div>
+                    </li>
+                    <li class="footer-contacts__item">
+                        <div class="contacts-item">
+                            <span class="contacts-item__title">Приемная:</span>
+                            <a href="tel: +7 (391) 221 15 26" class="contacts-item__link">+7 (391) 221 15 26</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </footer>
 
 </div>
