upd: scripts; rmv: favicon

--- a/app/templates/partials/layout/head.hbs
+++ b/app/templates/partials/layout/head.hbs
@@ -19,7 +19,7 @@
   {{#ifCond theme-color 'var-3'}}{{>core/theme-color color="#ED5F2C"}}{{/ifCond}}
   {{#ifCond theme-color undefined}}{{>core/theme-color color="#1B74FD"}}{{/ifCond}}
 
-  {{>core/favicon}}
+<!--  { {>core/favicon}}-->
 
   <link rel="stylesheet" href="../css/main.css?v={{cache}}">
 </head>
