--- a/app/css/core/grid.scss
+++ b/app/css/core/grid.scss
@@ -6,6 +6,18 @@ html {
   box-sizing: border-box;
   -ms-overflow-style: scrollbar;
 }
+
+.container {
+  width: 100%;
+  max-width: 1220px;
+  margin: 0 auto;
+  padding: 0 20px;
+
+  @include media(mobile) {
+    padding: 0 15px;
+  }
+}
+
 //
 //.container, .container-fluid {
 //  width: 100%;
