--- a/app/templates/pages/basement.hbs
+++ b/app/templates/pages/basement.hbs
@@ -2,7 +2,7 @@
 
 {{> layout/head page-title="Каркас"}}
 
-{{> layout/header active-header-menu="main"}}
+{{> layout/header current-page="main"}}
 
 {{#times 20}}
   <br/>
