--- a/app/templates/pages/home.hbs
+++ b/app/templates/pages/home.hbs
@@ -1,7 +1,7 @@
-{{!Home}}
+{{!Главная}}
 
-{{> layout/head page-title="Homepage"}}
+{{> layout/head page-title="Главная"}}
 
-{{> layout/header }}
+{{> layout/header current-page="main"}}
 
 {{> layout/footer }}
