--- a/app/css/layout/header.scss
+++ b/app/css/layout/header.scss
@@ -1,92 +1,30 @@
 .header {
-    padding: 25px 0;
-    color: #4f4e4e;
-    background: #f1f5f9;
-    
-    &-top {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
+
+  &__bottom {
+    background: $color-white;
+  }
+
+  &-menu {
+    &__list {
+      display: flex;
     }
-    
-    &__contacts {
-    width: 100%;
-    height: 100%;
-    max-width: 586px;
+
+    &__item {
+      flex-grow: 1;
     }
-    
-    &-contacts {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    line-height: 25px;
-    }
-    
-    &__actions {
-    width: 100%;
-    max-width: 255px;
-    }
-    
-    &__bottom {
-    margin-top: 25px;
-    background: #fff;
-    }
-    
-    &-menu {
-        &__list {
-            display: flex;
-        }
-        
-        &__item {
-            flex-grow: 1;
-        }
-    }
+  }
 }
-    
-.contacts-item {
-    &__link {
-        display: block;
-        font-weight: 900;
-    }
-}
-   
-.js-popup {
-    position: relative;
-    border-radius: 24px;
-    width: 100%;
-    max-width: 255px;
-    height: 42px;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 10px;
-    background: #feb22e;
-    
-    &:after {
-        content: '';
-        display: block;
-        position: absolute;
-        top: -4px;
-        left: -4px;
-        right: -4px;
-        bottom: -4px;
-        width: 263px;
-        height: 50px;
-        border-radius: 24px;
-        border: 1px solid #feb22e;
-    }
-}
-   
+
 .menu-item {
-    display: block;
-    font-weight: 700;
-    text-transform: uppercase;
-    height: 64px;
-    line-height: 64px;
-    text-align: center;
-    border-left: 1px solid #f1f5f9;
-    
-    &:last-child {
-        border-right: 1px solid #f1f5f9;
-    }
+  display: block;
+  font-weight: 700;
+  text-transform: uppercase;
+  height: 64px;
+  line-height: 64px;
+  text-align: center;
+  border-left: 1px solid #f1f5f9;
+
+  &:last-child {
+    border-right: 1px solid #f1f5f9;
+  }
 }
