--- a/app/templates/partials/blocks/header/header-top.hbs
+++ b/app/templates/partials/blocks/header/header-top.hbs
@@ -15,7 +15,7 @@
     <!--Contacts-->
     <div class="header-top__contacts">
       <ul class="header-top__contacts-list">
-        <li class="header-top__contacts-item">
+        <li class="header-top__contacts-item header-top__contacts-item--email">
           {{>components/contacts-item
               title="Наш email:"
               href="mailto:sibbc@yandex.ru"
