--- a/app/css/components/contacts-item.scss
+++ b/app/css/components/contacts-item.scss
@@ -5,6 +5,10 @@
     font-size: 15px;
     font-weight: 400;
     line-height: 1.65;
+
+    @include media(tablet) {
+      font-size: 14px;
+    }
   }
 
   &__link {
@@ -12,6 +16,14 @@
     font-size: 16px;
     font-weight: 900;
     line-height: 1.65;
+
+    @include media(mobile, up) {
+      white-space: nowrap;
+    }
+
+    @include media(tablet) {
+      font-size: 13px;
+    }
 
     &:hover {
       opacity: 0.7;
