fix: Layout, header-top; add: header-main; upd: maps;

--- a/app/css/layout/header-top.scss
+++ b/app/css/layout/header-top.scss
@@ -19,6 +19,10 @@
     width: 100%;
     max-width: 280px;
 
+    @include media(tabletSmall) {
+      flex-basis: 40%;
+    }
+
     @include media(mobile) {
       flex-basis: 100%;
       margin: 0 auto;
