--- a/app/templates/partials/blocks/home/01_intro.hbs
+++ b/app/templates/partials/blocks/home/01_intro.hbs
@@ -1,1 +1,49 @@
-<div class="intro"></div>
+<section class="intro">
+    <div class="container">
+        <div class="intro__content">
+            <div class="intro-slider"></div>
+            <div class="intro__news">
+                <ul class="intro-news">
+                    <li class="intro-news__item">
+                        <div class="news-item">
+                            <div class="news-item__title">XVII СИБИРСКИЙ ФОРУМ ХЛЕБОПЕЧЕНИЯ ОТМЕНЕН</div>
+                            <a href="#" class="news-item__link">Подробнее</a><img
+                                src="../assets/images/common/news-first.png" alt="" class="news-item__background">
+                        </div>
+                    </li>
+                    <li class="intro-news__item">
+                        <div class="news-item">
+                            <div class="news-item__title">СИБИРСКИЙ ХЛЕБОПЕКАРНЫЙ ЦЕНТР
+                                МЫ ОТКРЫТЫ И РАБОТАЕМ</div>
+                            <a href="#" class="news-item__link">Подробнее</a><img
+                                src="../assets/images/common/news-second.jpg" alt="" class="news-item__background">
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="intro__description">
+                <div class="intro-description">
+                    <div class="intro-description__title section-title">РАСКРОЙТЕ ПОТЕНЦИАЛ СВОЕГО БИЗНЕСА НА ВСЕ 100%
+                        ВМЕСТЕ С "СИБИРСКИМ
+                        ХЛЕБОПЕКАРНЫМ ЦЕНТРОМ"</div>
+                    <div class="intro-description__text">
+                        <p>Мы станем для вас надежным поставщиком с самым широким ассортиментом продукции для
+                            хлебопечения и
+                            кондитерского производства. Мы с радостью передадим свой опыт, знания, секреты, тонкости
+                            современного хлебопечения и кондитерского искусства.</p>
+                        <p>Мы поможем вам открыть пекарню или оптимизировать существующую:</p>
+                        <ul>
+                            <li>проконсультируем ваших технологов и кондитеров;</li>
+                            <li>снизим себестоимость продукции без потери ее качества и пользы;</li>
+                            <li>поможем оптимизировать производственные процессы;</li>
+                            <li>расскажем, как правильно развивать свой бизнес;</li>
+                            <li>вы не пропустите тренды, повысите конкурентноспособность.</li>
+                        </ul>
+                    </div>
+                    <img src="../assets/images/common/intro-background.jpg" alt=""
+                        class="intro-description__background">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
