--- a/app/css/layout/header-main.scss
+++ b/app/css/layout/header-main.scss
@@ -114,6 +114,7 @@
     width: 50%;
     height: 2px;
     background-color: $color-white;
+    @include transition;
 
     &::after,
     &::before {
@@ -123,6 +124,7 @@
       width: 100%;
       height: 2px;
       background-color: $color-white;
+      @include transition;
     }
 
     &::after {
@@ -131,6 +133,22 @@
 
     &::before {
       bottom: calc(100% + 3px);
+    }
+
+    .active & {
+      background-color: transparent;
+
+      &::before {
+        transform: rotate(45deg);
+        transform-origin: 50% 50%;
+        bottom: 0;
+      }
+
+      &::after {
+        transform: rotate(-45deg);
+        transform-origin: 50% 50%;
+        top: 0;
+      }
     }
   }
 }
