--- a/app/css/popups/base.scss
+++ b/app/css/popups/base.scss
@@ -1,18 +1,18 @@
 .popup-overlay {
   position: fixed;
-  overflow-x: hidden;
-  background: rgba(39, 37, 38, 0.56);
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
+  z-index: z(overlay);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  @include transition(0.3s);
-  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background: $color-gray-100-70;
+  @include transition(all, 350ms, ease);
+  overflow-x: hidden;
+  cursor: pointer;
 
   &.not-visible {
     background: transparent;
@@ -21,65 +21,147 @@
 
 .popup {
   position: fixed;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%) scale(0);
-  border-radius: 10px;
-  opacity: 0;
-  @include transition;
-  background: #FFFFFF;
-  min-width: 828px;
-  box-shadow: 0px 20px 60px rgba(0, 0, 0, 0.15);
-  overflow: hidden;
-  z-index: 2;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  display: none;
+  cursor: pointer;
 
-  @include tablet-and-mobile {
-    max-width: 95%;
-    min-width: 0;
-  }
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: $color-gray-100-70;
+  z-index: 10000;
 
   &.opened {
-    transform: translate(-50%, -50%) scale(1);
-    opacity: 1;
+    display: flex;
   }
 
-  &__header {
-    height: 123px;
+  &__wrapper {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    bottom: auto;
+    border: none;
+    overflow: auto;
+    @include hide-scrollbar;
+    outline: none;
+    padding: 50px 20px;
+    max-height: 100%;
+    transform: translateY(-50%);
     display: flex;
     justify-content: center;
-    align-items: center;
-    width: 100%;
+
+    @include mobile{
+      padding: 14px;
+    }
+  }
+
+  &__inner {
+    background: $color-white;
     position: relative;
-    padding: 0 15px;
+    display: inline-flex;
+    box-shadow: 3px 15px 30px rgba(48, 66, 117, 0.1);
+    border-radius: 8px;
+    overflow: hidden;
+    cursor: default;
+
+    @include transition(all, 0.35s);
+    transform: scale(0);
+    opacity: 0;
+
+    &.opened {
+      transform: scale(1);
+      opacity: 1;
+    }
+  }
+
+  &__window {
+    max-width: 100%;
+    min-height: 40px;
+    min-width: 200px;
+    border-radius: 8px;
+    @include shadow(lg);
+    display: flex;
+    justify-content: center;
   }
 
   &__title {
     display: block;
-    text-align: center;
-    font-size: 48px;
-    line-height: 64px;
+  }
+
+  &__btn {
+    position: absolute;
+    top: 20px;
+    right: 0;
+    display: flex;
+    border-radius: 4px;
+    transform: translateY(-50%);
+    @include transition;
   }
 
   &__close {
-    @include transition;
-    border-radius: 4px;
     position: absolute;
-    right: 31px;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 50px;
-    height: 50px;
+    right: 25px;
+    top: 25px;
+    display: block;
+    width: 26px;
+    height: 26px;
+    margin: -5px;
+    @include transition(all, 300ms, linear);
+    border-radius: 4px;
+    background-color: transparent;
+    z-index: 2;
 
-    &:before {
+    &:hover {
+      background-color: $color-gray-20;
+
+      &::after,
+      &::before {
+        background-color: $color-gray-80;
+      }
+    }
+
+    &::after,
+    &::before {
+      position: absolute;
+      top: 50%;
+      left: 50%;
       content: '';
-      @include sprite('popup-close');
-      @include align();
+      display: block;
+      width: #{diagonal(16)}px;
+      height: 1.8px;
+      border-radius: 5px;
+      background-color: $color-gray-60;
+      @include transition;
+    }
+
+    &::after {
+      transform: translate(-50%, -50%) rotate(45deg);
+    }
+
+    &::before {
+      transform: translate(-50%, -50%) rotate(-45deg);
+    }
+
+    @include mobile{
+      top: 15px;
+      right: 15px;
     }
   }
 
+  &__container {
+    display: flex;
+    flex-direction: column;
+    max-height: calc(100vh - 20px);
+  }
+
   &__content {
-    padding: 20px;
-    background: #FAFAFA;
+    background: $color-white;
     position: relative;
+    max-height: 100%;
+    max-width: 100%;
   }
 }
