--- a/app/templates/partials/blocks/header/header-top.hbs
+++ b/app/templates/partials/blocks/header/header-top.hbs
@@ -32,7 +32,10 @@
     </div>
     <!--Actions-->
     <div class="header-top__actions">
-      <button class="header-top__actions-btn js-popup"><span>Заказать звонок</span></button>
+      <button class="header-top__actions-btn js-popup-open" data-popup="example"><span>Заказать звонок</span></button>
+
+      <!--Popup-->
+      {{>popups/example id="call"}}
     </div>
   </div>
 </div>
