--- a/app/templates/partials/blocks/home/01_intro.hbs
+++ b/app/templates/partials/blocks/home/01_intro.hbs
@@ -1,22 +1,47 @@
 <section class="intro">
     <div class="container">
         <div class="intro__content">
-            <div class="intro-slider"></div>
+            <div class="intro-slider">
+              <div class="intro-slider__container swiper-container">
+                <div class="intro-slider__wrapper swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="intro-slider__slide swiper-slide">
+                      <div class="intro-slide">
+                        <img class="intro-slide__background" src="../assets/images/common/slid1.png" alt="">
+                      </div>
+                    </div>
+                    <div class="intro-slider__slide swiper-slide">
+                      <div class="intro-slide">
+                        <img class="intro-slide__background" src="../assets/images/common/slid2.jpg" alt="">
+                      </div>
+                    </div>
+                    <div class="intro-slider__slide swiper-slide">
+                      <div class="intro-slide">
+                        <img class="intro-slide__background" src="../assets/images/common/slid3.jpg" alt="">
+                      </div>
+                    </div>
+                </div>
+
+                  <div class="swiper-button-prev intro-slider__button intro-slider__prev"></div>
+                  <div class="swiper-button-next intro-slider__button intro-slider__next"></div>
+              </div>
+            </div>
             <div class="intro__news">
                 <ul class="intro-news">
                     <li class="intro-news__item">
                         <div class="news-item">
                             <div class="news-item__title">XVII СИБИРСКИЙ ФОРУМ ХЛЕБОПЕЧЕНИЯ ОТМЕНЕН</div>
-                            <a href="#" class="news-item__link">Подробнее</a><img
-                                src="../assets/images/common/news-first.png" alt="" class="news-item__background">
+                            <a href="#" class="news-item__link">Подробнее</a>
+                            <img src="../assets/images/common/news-first.png" alt="" class="news-item__background">
                         </div>
                     </li>
                     <li class="intro-news__item">
-                        <div class="news-item">
-                            <div class="news-item__title">СИБИРСКИЙ ХЛЕБОПЕКАРНЫЙ ЦЕНТР
-                                МЫ ОТКРЫТЫ И РАБОТАЕМ</div>
-                            <a href="#" class="news-item__link">Подробнее</a><img
-                                src="../assets/images/common/news-second.jpg" alt="" class="news-item__background">
+                        <div class="news-item news-gray">
+                            <div class="news-gray__title">СИБИРСКИЙ ХЛЕБОПЕКАРНЫЙ ЦЕНТР
+                            МЫ ОТКРЫТЫ И РАБОТАЕМ
+                            ДЛЯ ВАС!</div>
+                            <a href="#" class="news-item__link">Подробнее</a>
+                            <img src="../assets/images/common/news-second.jpg" alt="" class="news-item__background">
                         </div>
                     </li>
                 </ul>
