--- a/app/templates/partials/blocks/home/01_intro.hbs
+++ b/app/templates/partials/blocks/home/01_intro.hbs
@@ -4,26 +4,43 @@
             <div class="intro-slider">
               <div class="intro-slider__container swiper-container">
                 <div class="intro-slider__wrapper swiper-wrapper">
-                    <!-- Slides -->
                     <div class="intro-slider__slide swiper-slide">
                       <div class="intro-slide">
+                        <div class="intro-slide__title">Поставка ингредиентов для пекарен и кондитерских:</div>
+                        <ul class="intro-slide__list">
+                          <li class="intro-slide__item">Большие складские запасы</li>
+                          <li class="intro-slide__item">Доставка собственным транспортом с соблюдением режима транспортировки</li>
+                          <li class="intro-slide__item">Мастер классы и консультации для наших клиентов.</li>
+                        </ul>
                         <img class="intro-slide__background" src="../assets/images/common/slid1.png" alt="">
                       </div>
                     </div>
                     <div class="intro-slider__slide swiper-slide">
                       <div class="intro-slide">
+                        <div class="intro-slide__title">Технологическая поддержка вашего бизнеса</div>
+                        <ul class="intro-slide__list">
+                          <li class="intro-slide__item">Выезд технологов СибХЦ на предприятия</li>
+                          <li class="intro-slide__item">Гарантия качества ингредиентов и сырья</li>
+                          <li class="intro-slide__item">Индивидуальный подход</li>
+                          <li class="intro-slide__item">Программы лояльности</li>
+                        </ul>
                         <img class="intro-slide__background" src="../assets/images/common/slid2.jpg" alt="">
                       </div>
                     </div>
                     <div class="intro-slider__slide swiper-slide">
                       <div class="intro-slide">
+                        <div class="intro-slide__title">Информирование о трендах и тенденциях рынка</div>
+                        <ul class="intro-slide__list">
+                          <li class="intro-slide__item">Демонстрационный центр для клиентов</li>
+                          <li class="intro-slide__item">Информация из первых уст: бесплатные обучающие семинары от технологов СибХЦ</li>
+                          <li class="intro-slide__item">Уникальная возможность общения с технологами ведущих предприятий отрасли</li>
+                        </ul>
                         <img class="intro-slide__background" src="../assets/images/common/slid3.jpg" alt="">
                       </div>
                     </div>
                 </div>
-
-                  <div class="swiper-button-prev intro-slider__button intro-slider__prev"></div>
-                  <div class="swiper-button-next intro-slider__button intro-slider__next"></div>
+                <div class="swiper-button-prev intro-slider__button intro-slider__prev"></div>
+                <div class="swiper-button-next intro-slider__button intro-slider__next"></div>
               </div>
             </div>
             <div class="intro__news">
@@ -48,22 +65,24 @@
             </div>
             <div class="intro__description">
                 <div class="intro-description">
-                    <div class="intro-description__title section-title">РАСКРОЙТЕ ПОТЕНЦИАЛ СВОЕГО БИЗНЕСА НА ВСЕ 100%
-                        ВМЕСТЕ С "СИБИРСКИМ
-                        ХЛЕБОПЕКАРНЫМ ЦЕНТРОМ"</div>
-                    <div class="intro-description__text">
-                        <p>Мы станем для вас надежным поставщиком с самым широким ассортиментом продукции для
-                            хлебопечения и
-                            кондитерского производства. Мы с радостью передадим свой опыт, знания, секреты, тонкости
-                            современного хлебопечения и кондитерского искусства.</p>
-                        <p>Мы поможем вам открыть пекарню или оптимизировать существующую:</p>
-                        <ul>
-                            <li>проконсультируем ваших технологов и кондитеров;</li>
-                            <li>снизим себестоимость продукции без потери ее качества и пользы;</li>
-                            <li>поможем оптимизировать производственные процессы;</li>
-                            <li>расскажем, как правильно развивать свой бизнес;</li>
-                            <li>вы не пропустите тренды, повысите конкурентноспособность.</li>
-                        </ul>
+                  <div class="intro-description__content">
+                      <div class="intro-description__title section-title">РАСКРОЙТЕ ПОТЕНЦИАЛ СВОЕГО БИЗНЕСА НА ВСЕ 100%
+                          ВМЕСТЕ С "СИБИРСКИМ
+                          ХЛЕБОПЕКАРНЫМ ЦЕНТРОМ"</div>
+                      <div class="intro-description__text">
+                          <p>Мы станем для вас надежным поставщиком с самым широким ассортиментом продукции для
+                              хлебопечения и
+                              кондитерского производства. Мы с радостью передадим свой опыт, знания, секреты, тонкости
+                              современного хлебопечения и кондитерского искусства.</p>
+                          <p>Мы поможем вам открыть пекарню или оптимизировать существующую:</p>
+                          <ul>
+                              <li>проконсультируем ваших технологов и кондитеров;</li>
+                              <li>снизим себестоимость продукции без потери ее качества и пользы;</li>
+                              <li>поможем оптимизировать производственные процессы;</li>
+                              <li>расскажем, как правильно развивать свой бизнес;</li>
+                              <li>вы не пропустите тренды, повысите конкурентноспособность.</li>
+                          </ul>
+                      </div>
                     </div>
                     <img src="../assets/images/common/intro-background.jpg" alt=""
                         class="intro-description__background">
