--- a/app/css/config/colors.scss
+++ b/app/css/config/colors.scss
@@ -1,7 +1,7 @@
 :root {
   //Primary
-  --color-primary: var(--color-blue-70);
-  --color-primary-hover: var(--color-blue-80);
+  --color-primary: var(--color-yellow);
+  --color-primary-hover: var(--color-yellow-hover);
   --color-bg-gray: #f1f5f9;
   --color-font-gray: #4f4e4e;
   --color-font-dark: #333333;
@@ -13,8 +13,7 @@
   --color-blue-80: #0042FF;
   --color-blue-70: #1B74FD;
   --color-blue-70-opacity: #{transparentize(#1B74FD, 0.5)};
-  // Dark Blue
-  --color-dark-blue-100: #283B70;
+
   // Gray
   --color-gray-100: #363C4E;
   --color-gray-100-overlay: #{transparentize(#363C4E, 0.3)};
@@ -24,11 +23,13 @@
   --color-gray-40: #DFE3EC;
   --color-gray-20: #F2F4F8;
   --color-gray-10: #F6F9FF;
+
   // Green
   --color-green-100: #0BB578;
-  --color-green-10: #D1F8E1;
+
   // Red
   --color-red-100: #ED143B;
+
   // White
   --color-white-100: #FFFFFF;
   --color-white-80: #{transparentize(#FFFFFF, 0.2)};
@@ -54,12 +55,8 @@ $color-blue-80: var(--color-blue-80);
 $color-blue-70: var(--color-blue-70);
 $color-blue-70-50: var(--color-blue-70-opacity);
 
-// Dark Blue
-$color-dark-blue-100: var(--color-dark-blue-100);
-
 // Green
 $color-green-100: var(--color-green-100);
-$color-green-10: var(--color-green-10);
 
 // Red
 $color-red-100: var(--color-red-100);
@@ -74,8 +71,8 @@ $color-white-10: var(--color-white-10);
 $color-black: #000000;
 $color-yellow: var(--color-yellow);
 $color-yellow-hover: var(--color-yellow-hover);
-$color-primary: var(--color-yellow);
-$color-primary-hover: var(--color-yellow-hover);
+$color-primary: var(--color-primary);
+$color-primary-hover: var(--color-primary-hover);
 $color-bg-gray: var(--color-bg-gray);
 $color-font-gray: var(--color-font-gray);
 $color-font-dark: var(--color-font-dark);
