--- a/app/templates/partials/ui-kit/blocks/buttons.hbs
+++ b/app/templates/partials/ui-kit/blocks/buttons.hbs
@@ -1,4 +1,11 @@
-{{> ui-kit/core/table buttons=true table-title="Default" table-content=this.buttons.default}}
-{{> ui-kit/core/table buttons=true table-title="Primary" table-content=this.buttons.primary}}
-{{> ui-kit/core/table buttons=true table-title="Secondary" table-content=this.buttons.secondary}}
-{{> ui-kit/core/table buttons=true table-title="Sizes" table-content=this.buttons.sizes}}
+<li class="project-ui__section-row">
+  {{>ui/btn size="large" label=".btn .btn--large"}}
+  {{>ui/btn label=".btn"}}
+  {{>ui/btn size="small" label=".btn .btn--small"}}
+</li>
+<li>
+  {{>ui/btn color="primary" label=".btn .btn--primary"}}
+</li>
+<li>
+  {{>ui/btn size="w100" label=".btn .btn--w100"}}
+</li>
