--- a/app/templates/partials/ui-kit/core/section.hbs
+++ b/app/templates/partials/ui-kit/core/section.hbs
@@ -1,10 +1,10 @@
-<section class="ui-section" {{#if id}}id="{{id}}"{{/if}}>
-  <header class="ui-section__header">
-    <h2 class="ui-section__title">{{title}}</h2>
+<section class="project-ui__section" {{#if id}}id="{{id}}"{{/if}}>
+  <header>
+    <h2 class="project-ui__section-title">{{title}}</h2>
   </header>
-  <div class="ui-section__content">
-    <ul class="{{#if section-mode}}{{section-mode}}{{/if}}">
-      {{> @partial-block}}
+  <div class="project-ui__section-content">
+    <ul {{#if section-mode}}class="{{section-mode}}"{{/if}}>
+      {{>@partial-block}}
     </ul>
   </div>
 </section>
