--- a/app/templates/partials/ui-kit/core/sidebar.hbs
+++ b/app/templates/partials/ui-kit/core/sidebar.hbs
@@ -1,9 +1,10 @@
-<nav class="ui-aside__inner">
-  <ul class="ui-aside__nav">
-    {{#each ui.navigation}}
-      <li>
-        <button class="ui-aside__link" data-id="{{this.id}}">{{this.label}}</button>
-      </li>
-    {{/each}}
+<nav>
+  <ul>
+    {{>ui-kit/core/anchor id="colors" label="Colors"}}
+    {{>ui-kit/core/anchor id="buttons" label="Buttons"}}
+    {{>ui-kit/core/anchor id="form" label="Form Elements"}}
+    {{>ui-kit/core/anchor id="popups" label="Popups"}}
+    {{>ui-kit/core/anchor id="loaders" label="Loaders"}}
+    {{>ui-kit/core/anchor id="widgets" label="Widgets"}}
   </ul>
 </nav>
