--- a/app/templates/ui-toolkit.hbs
+++ b/app/templates/ui-toolkit.hbs
@@ -1,44 +1,21 @@
 {{!UI Kit}}
 
-{{> layout/head
-        page-title="UI Kit"
-        page-description="UI Kit project page."
-        page-url="https://ozitag.com"
-        page-image="https://ozitag.com/content/images/home/og.jpg"
-        page-image-16-9="https://ozitag.com/content/images/home/og_16x9.jpg"
-        page-image-alt=".."
-        page-published-date="2019-02-05T12:01:51+00:00"
-        page-modified-date="2020-03-30T09:00:00+03:00"
-}}
+{{>layout/head page-title="UI Kit"}}
 
-<main class="ui">
-  <div class="ui__container">
-    <aside class="ui__aside ui-aside">
-      {{> ui-kit/core/sidebar }}
+<div class="project-ui">
+  <div class="project-ui__container">
+    <aside class="project-ui__sidebar">
+      {{>ui-kit/core/sidebar}}
     </aside>
-    <section class="ui__main ui-main">
-      <header class="ui-main__header">
-        <h1 class="ui-main__title">UI Kit</h1>
+    <main class="project-ui__main">
+      <header class="project-ui__header">
+        <h1 class="project-ui__title">UI Kit</h1>
       </header>
-      {{> ui-kit/core/content }}
-    </section>
+      <div class="project-ui__content">
+        {{>ui-kit/core/content}}
+      </div>
+    </main>
   </div>
-</main>
+</div>
 
-{{> popups/example}}
-
-<script defer>
-  window.onload = () => {
-    const $btn = $('.ui-aside__link');
-
-    $btn.on('click', function() {
-      const id = $(this).data('id');
-
-      $('html, body').animate({
-        scrollTop: $(`#${id}`).offset().top - 70,
-      }, 600);
-    });
-  };
-</script>
-
-{{> layout/bottom }}
+{{>layout/bottom}}
