add: header popup

--- a/app/templates/partials/blocks/header/header-top.hbs
+++ b/app/templates/partials/blocks/header/header-top.hbs
@@ -32,10 +32,9 @@
     </div>
     <!--Actions-->
     <div class="header-top__actions">
-      <button class="header-top__actions-btn js-popup-open" data-popup="example"><span>Заказать звонок</span></button>
-
+      <button class="header-top__actions-btn js-popup-open" data-popup="call"><span>Заказать звонок</span></button>
       <!--Popup-->
-      {{>popups/example id="call"}}
+      {{>popups/call id="call"}}
     </div>
   </div>
 </div>
