--- a/app/css/components/buttons.scss
+++ b/app/css/components/buttons.scss
@@ -44,15 +44,15 @@
     width: 100%;
   }
 
-  // Outline
-  &--outline {
-    color: $color-primary;
-    background-color: transparent;
+  // Primary
+  &--primary {
+    color: $color-white;
+    background-color: $color-primary;
     border: 1px solid $color-primary;
 
     &:hover {
-      color: $color-white;
-      background-color: $color-primary;
+      color: $color-primary;
+      background-color: $color-white;
     }
   }
 }
