--- a/app/css/layout/header-top.scss
+++ b/app/css/layout/header-top.scss
@@ -100,6 +100,7 @@
     font-weight: bold;
     line-height: 1;
     text-transform: uppercase;
+    letter-spacing: 0.5px;
     border-radius: 24px;
     box-shadow: 0 0 0 3px $color-bg-gray, 0 0 0 4px $color-primary;
 
