--- a/app/css/popups/call.scss
+++ b/app/css/popups/call.scss
@@ -1,17 +1,18 @@
 .popup-call {
-  padding: 40px 66px 50px;
+  padding: 40px 35px 50px;
 
   @include media(mobile) {
-    padding: 20px;
+    padding: 40px;
   }
 
   &__title {
     display: block;
     color: $color-gray-100;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 22px;
     line-height: 130%;
     letter-spacing: -0.04em;
+    text-align: center;
   }
 
   &__text {
@@ -26,19 +27,45 @@
   &__submit {
     display: flex;
     justify-content: center;
-    margin-top: 30px;
+    margin-top: 10px;
+  }
 
-    .btn {
-      padding-left: 40px;
-      padding-right: 40px;
+  &__submit-btn {
+    min-width: 250px;
+    @include btn-base;
+    @include btn-regular;
+    padding-left: 40px;
+    padding-right: 40px;
+    @include btn-primary;
+    color: $color-font-dark;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+
+    @include media(mobile) {
+      width: 100%;
+      font-size: 11px;
+    }
+
+    &:hover {
+      color: $color-font-dark;
     }
   }
 
-  &__normal {
-    margin: 0 45px;
+  &__terms {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+  }
 
-    @include media(mobile) {
-      margin: 0;
+  &__terms-link {
+    @include text-caption;
+    color: #111111;
+    text-decoration: underline;
+
+    &:hover {
+      color: $color-primary-hover;
+      text-decoration: underline;
     }
   }
 
@@ -49,20 +76,37 @@
   }
 
   &__form {
-    margin-top: 40px;
-    width: 330px;
-    max-width: 100%;
+    width: 100%;
+    max-width: 400px;
   }
 
   &__input {
-    margin-top: 20px;
-
-    @include media(mobile) {
-      margin-top: 10px;
-    }
+    margin-top: 10px;
 
     &:first-child {
       margin-top: 0;
+    }
+  }
+
+  .form-checkbox__label {
+    @include media(mobile) {
+      align-items: flex-start;
+    }
+  }
+
+  .form-checkbox__label-text {
+    @include media(mobile, up) {
+      line-height: 23px;
+    }
+
+    @include media(mobile) {
+      line-height: 1.5;
+    }
+  }
+
+  .form-field__input {
+    @include media(mobile) {
+      font-size: 14px;
     }
   }
 }
