--- a/app/templates/partials/popups/call.hbs
+++ b/app/templates/partials/popups/call.hbs
@@ -1,13 +1,13 @@
 {{#> popups/_base id=id}}
   <div class="popup-call">
-    <div class="popup-call__success" style="display: {{#if success}}block{{else}}none{{/if}}">
+    <div class="popup-call__success" style="display:{{#if success}} block{{else}} none{{/if}}">
       <span class="popup-call__title">Звонок заказа</span>
       <p class="popup-call__text">Обычно мы перезваниваем в течени 10 минут</p>
       <div class="popup-call__submit">
         <button class="btn btn--large btn--primary js-popup-close">Закрыть</button>
       </div>
     </div>
-    <div class="popup-call__failure" style="display: {{#if failure}}block{{else}}none{{/if}}">
+    <div class="popup-call__failure" style="display:{{#if failure}} block{{else}} none{{/if}}">
       <span class="popup-call__title">Ошибка отправки</span>
       <p class="popup-call__text">К сожалению ваша заявка не была отправлена.<br/>
         Но вы можете попробовать отправить еще раз,
@@ -17,37 +17,24 @@
       </div>
     </div>
     <div class="popup-call__normal"
-         style="display: {{#if failure}}none{{else}}{{#if success}}none{{else}}block{{/if}}{{/if}}">
+         style="display:{{#if failure}} none{{else}}{{#if success}} none{{else}} block{{/if}}{{/if}}">
       <div class="popup-call__form">
-        <span class="popup-call__title">Заказ звонка</span>
+        <span class="popup-call__title">Заказать звонок</span>
         <div class="popup-call__input">
-          {{> form/input label="Фамилия и имя*" placeholder="Фамилия и имя*"}}
+          {{>form/input label="Фамилия и имя*" placeholder="Фамилия и имя*"}}
         </div>
         <div class="popup-call__input">
-          {{> form/input label="Номер телефона*" placeholder="Номер телефона*"}}
+          {{>form/input label="Номер телефона*" placeholder="Номер телефона*"}}
         </div>
         <div class="popup-call__input">
-          {{#> form/select label="Тема звонка"}}
-            <option></option>
-            <option value="1">Консультация по действующим продуктам</option>
-            <option value="2">Тема 2</option>
-            <option value="3">Тема 3</option>
-          {{/form/select}}
-        </div>
-        <div class="popup-call__input">
-          {{#> form/select label="Желаемое время звонка"}}
-            <option></option>
-            <option value="1">до 21</option>
-            <option value="2">до 22</option>
-            <option value="3">до 23</option>
-          {{/form/select}}
-        </div>
-        <div class="popup-call__input">
-          {{> form/input label="Комментарий*" placeholder="Комментарий*"}}
+          {{>form/checkbox label="Я согласен с условиями обработки персональных данных"}}
         </div>
       </div>
       <div class="popup-call__submit">
-        <button class="btn btn--large btn--primary btn--w100">Отправить заявку</button>
+        <button class="popup-call__submit-btn">Заказать</button>
+      </div>
+      <div class="popup-call__terms">
+        <a class="popup-call__terms-link" href="#">Ознакомиться с условиями</a>
       </div>
     </div>
   </div>
